--- a/config
+++ b/config
@@ -91,7 +91,7 @@ bindsym $mod+a focus parent
 #bindsym $mod+d focus child
 
 # lock the session
-bindsym $mod+shift+x exec ~/.config/i3/i3lock.sh 
+bindsym $mod+shift+x exec /home/ludovic/.config/i3/i3lock.sh 
 
 # suspend the session
 bindsym $mod+shift+z exec systemctl 
